# bevy_compute_noise

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/shaders/: image_3d_shader.wgsl  image_shader.wgsl  worley.wgsl  worley_2d.wgsl  worley_3d.wgsl
examples/: 3d_test.rs  demo.rs  example.rs  example_2d.rs  example_3d.rs  image.rs  readback.rs  test.rs  test_2d.rs  test_3d.rs
src/: compute.rs  compute_noise.rs  extract.rs  image.rs  lib.rs  node.rs  noise_queue.rs  pipeline.rs  prepare.rs  shader.rs  test.rs  test.wgsl
src/compute_noise/: mod.rs  worley_2d.rs  worley_3d.rs
src/noise/: fbm.rs  mod.rs  perlin.rs  perlin_2d.rs  perlin_3d.rs  worley.rs  worley_2d.rs  worley_3d.rs
src/noise/generators/: fbm.rs  mod.rs  perlin.rs  worley.rs
src/noise/generators/shaders/: fbm.wgsl  perlin_2d.wgsl  perlin_3d.wgsl  worley_2d.wgsl  worley_3d.wgsl
src/noise/modifiers/: invert.rs  mod.rs
src/noise/modifiers/shaders/: invert.wgsl
src/noise/shaders/: fbm.wgsl  perlin_2d.wgsl  perlin_3d.wgsl  render.wgsl  util.wgsl  worley_2d.wgsl  worley_3d.wgsl
src/readback/: extract.rs  mod.rs  prepare.rs  read.rs  render.rs  util.rs
src/render/: compute.rs  extract.rs  mod.rs  node.rs  pipeline.rs  prepare.rs
