[package]
name = "bevy_compute_noise"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "noise", "perlin", "worley", "shaders"]
repository = "https://github.com/jadedbay/bevy_compute_noise"
description = "A Bevy plugin for generating tilable 2D/3D noise textures using compute shaders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.24.0"
bytemuck = "1.15.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [ "bevy_render" ]

[dev-dependencies]
bevy_flycam = "0.13.0"
bevy = { version = "0.13.2", default-features = false, features = ["bevy_winit", "x11", "tonemapping_luts", "bevy_pbr", "bevy_sprite"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3