[package]
name = "bevy_compute_noise"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "noise", "perlin", "worley", "shaders"]
repository = "https://github.com/jadedbay/bevy_compute_noise"
description = "A Bevy plugin for generating tilable 2D/3D noise textures using compute shaders"
documentation = "https://docs.rs/bevy_compute_noise/latest/bevy_compute_noise/"
exclude = ["examples/*", "assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15"
rand = "0.8"

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = [ "bevy_render", "bevy_asset", "bevy_image" ]

[dev-dependencies]
bevy-inspector-egui = "0.28.0"
bevy = { version = "0.15.0", default-features = false, features = ["bevy_winit", "x11", "tonemapping_luts", "bevy_pbr", "bevy_sprite", "bevy_window"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3